fix add class, delete grade struct
